# cima-sync-cli

./: .gitignore  Cargo.toml  build.sh  config.example.json
scripts/: force-network.sh
src/: auth.rs  config.rs  logging.rs  main.rs  network.rs  utils.rs
