[package]
name = "cima-sync-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.0"

reqwest = { version = "0.12.15", features = ["blocking", "rustls-tls"], default-features = false }
rpassword = "7.4"
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
sha2 = "0.10"
hex = "0.4"
